ingress-booksapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-ingress
  namespace: booksapp
spec:
  rules:
  - host: books.439f5966-2b22-459f-945f-c038901d2945.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 7000
